# yet_another_knowledge_base

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
common/src/yet_another_knowledge_base/: FusekiConnector.py  KBConnector.py  KBConnectors.py  RDFlibConnector.py
launch/: start_yakob.launch
msg/: Fact.msg  QueryResult.msg
resources/: type_xsd_map.yaml
resources/ontologies/: incorap_domain.owl
src/: YAKoB_node.py  yakob_playground.py  yet_another_knowledge_base.py
srv/: YakobQuery.srv  YakobUpdate.srv  YakobUpdateFacts.srv  YakobUpdateGraph.srv
